change background color of buttons on homepage to avoid contrast error from wave validator

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -46,7 +46,7 @@ a {
     font-weight: 300;
     text-decoration: none;
     position: relative;
-    background-color: rgb(18, 140, 184);
+    background-color: rgb(141, 146, 148);
     color: #fff;
     border: hidden;
     font-size: 20px;
